--- a/docs/Labs/Week10_formativeAssessment.Rmd
+++ b/docs/Labs/Week10_formativeAssessment.Rmd
@@ -9,9 +9,9 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, include=FALSE}
-# library(learnr)
-# library(tidyverse)
-# library(kableExtra)
+library(learnr)
+library(tidyverse)
+library(kableExtra)
 # library(plotly)
 # library(shiny)
 
@@ -27,54 +27,137 @@ accent3 <- '#19424C'
 During today's lab, you'll be working through the formative assessment. This assessment does not contribute to your course mark. It serves only as a check-in so that you are more aware of what areas you're confident in, and which areas you may need to revise further. The tutors will be available to clarify any feedback or provide further feedback as necessary. Good luck!
 
 
-## Making a hypothesis
-
-```{r, echo = F}
-dat <- read.csv('https://mtruelovehill.github.io/PRM/Labs/Week8LabData.csv')
-
-datInfo <- data.frame(VariableName = colnames(dat),
-                      Description=c('Age in years',
-                                    'Levels: Female; Male; Nonbinary; Other; Prefer not to Disclose',
-                                    'Amount of physical activity per week in hours',
-                                    'Amount of sleep per week in hours',
-                                    'Scores on a social support scale; values may range between 0-45',
-                                    'Scores on a well-being scale; values may range between 0-40'))
-
-datInfo %>%
-  kbl(col.names=c('Variable Name', 'Description')) %>%
-  kable_styling(full_width = F) %>%
-  row_spec(0, bold = T, color=baseColor, font_size = 18, align='l') %>%
-  column_spec(1, bold = T, width = '4.5cm')
-```
-
-
 ## Selecting an Appropriate Test
 
 
-```{r cyu1, echo = FALSE}
+```{r selectingTest, echo = FALSE}
 quiz(caption = '',
+     question('At what level of measurement should the independent variables be when using a One-Way ANOVA? Please select any that apply.',
+              answer('Continuous'),
+              answer('Nominal', correct = T),
+              answer('Ordinal', correct = T),
+              answer('Binary'),
+              message = 'A One-Way ANOVA requires categorical independent variables; these can be either nominal or ordinal. While it could work with binary variables, a t-test is a better option.'),
+      question("You have designed an intervention for people who report high levels of loneliness, by which they engage in a certain number of volunteering activities per week. You take a sample and measure their loneliness levels on a continuous scale before the intervention. You then perform the intervention and measure their loneliness levels again afterwards. You also record their living situation (levels: alone/with roommates/with family or partner). You would like to determine whether the intervention had an effect on loneliness, and whether this effect was moderated by living situation. Which of the following best describes the test you would use?",
+               answer('1x3 Between-Subjects Factorial ANOVA'),
+               answer('1x3 Within-Subjects Factorial ANOVA'),
+               answer('1x3 Mixed Factorial ANOVA'),
+               answer('2x1 Between-Subjects Factorial ANOVA'),
+               answer('2x1 Within-Subjects Factorial ANOVA'),
+               answer('2x1 Mixed Factorial ANOVA'),
+               answer('2x3 Between-Subjects Factorial ANOVA'),
+               answer('2x3 Within-Subjects Factorial ANOVA'),
+               answer('2x3 Mixed Factorial ANOVA', correct = T),
+               message = "As you have one between-subjects variable (living situation) and one within-subjects variable (time), you would use a Mixed ANOVA. Your first variable, time, has 2 levels (pre- or post-intervention), and your second variable, living situation, has 3 levels (alone; with roommates; with family or partner), so your analysis would be a 2x3 Mixed Factorial ANOVA."),
      question("A researcher wants to know whether her sample’s scores on a personality test are significantly different than 50. Which of the following statistical tests should she use?",
               answer('One-Sample t-test', correct = T),
               answer('independent-samples t-test'),
               answer('paired-samples t-test'),
-              answer('One-Way ANOVA'),
+              answer('One-Way Between-Subjects ANOVA'),
+              answer('One-Way Repeated-Measures ANOVA'),
               answer('Factorial ANOVA'),
               answer('Simple Linear Regression'),
               answer('Multiple Linear Regression'),
               message = "The researcher is comparing her sample's mean to a single, pre-established value. A one-sample t-test would be the best method for testing this."),
-     question('At what level of measurement does the dependent variable need to be for a t-test?',
+     question('At what level of measurement does the independent variable need to be for a t-test? Please select any that apply.',
+              answer('Continuous'),
+              answer('Nominal', correct = T),
+              answer('Ordinal', correct = T),
+              answer('Binary', correct = T),
+              message = 'A t-test requires the independent variable to be categorical. It could be nominal or ordinal, but there must only be two levels (binary).',
+              random_answer_order = T),
+     question('Researchers conduct a study into the effect of sleep deprivation on speed of processing in a driving simulator. They ask participants to complete a 15 minute driving simulation task. At the end of the task, they ask the participants a series of questions about the events in the simulation. Participants receive a score out of 25 representing the number of questions they get correct. The participants then spend the night in a room controlled by the research team where they are limited to three hours sleep. The next day, they complete the same task and get a second score. The team want to consider the difference in these scores. Which test is most appropriate?',
+              answer('One-Sample t-test'),
+              answer('independent-samples t-test'),
+              answer('paired-samples t-test', correct = T),
+              answer('One-Way Between-Subjects ANOVA'),
+              answer('One-Way Repeated-Measures ANOVA'),
+              answer('Factorial ANOVA'),
+              answer('Simple Linear Regression'),
+              answer('Multiple Linear Regression'),
+              message = 'Here, you have a continuous dependent variable (score). As the same sample provides responses at both timepoints, this is a repeated-measures design with two groups (pre and post sleep-deprivation). A paired-samples t-test would be the best '),
+     question('You are testing the effects of parental involvement and bullying on emotional regulation in children. Parental involvement is measured by the number of parental interactions per week, and bullying as the number of times the child is bullied per week. Which of the following analyses would best test for these effects?',
+              answer('One-Sample t-test'),
+              answer('independent-samples t-test'),
+              answer('paired-samples t-test'),
+              answer('2 One-Way Between-Subjects ANOVAs'),
+              answer('One-Way Repeated-Measures ANOVA'),
+              answer('Factorial ANOVA'),
+              answer('2 Simple Linear Regressions'),
+              answer('Multiple Linear Regression', correct = T),
+              message = "Here, you want to investigate the relationship between 2 continuous predictors and a continuous outcome. For this type of analysis, you would use multiple linear regression. If you were to use separate analyses, you would (1) increase the chances of making a Type I error and (2) be unable to capture the effect of bullying on emotional regulation while controlling for parental interactions and vice versa."),
+     question('At what level of measurement do the independent variables (predictors) need to be for a linear regression? Please select any that apply.',
               answer('Continuous', correct = T),
-              answer('Nominal'),
-              answer('Ordered Categories'),
-              answer('Binary'),
-              message = 'A t-test requires the dependent variable to be continuous.',
-              random_answer_order = T))
+              answer('Nominal', correct = T),
+              answer('Ordinal', correct = T),
+              answer('Binary', correct = T),
+              message = 'A linear regression can take predictors of any type. However, the outcome variable must be continuous (or have a large enough range that it simulates normality).'),
+     question('You are testing the association between hospital size and stress in nurses. You compare nurse stress from nurses across 3 different hospital sizes (small, medium, and large). Assume that stress is a continuous variable. Which of the following analyses is could be used to to test this association?',
+              answer('One-Sample t-test'),
+              answer('independent-samples t-test'),
+              answer('paired-samples t-test'),
+              answer('One-Way Between-Subjects ANOVA', correct = T),
+              answer('One-Way Repeated-Measures ANOVA'),
+              answer('Factorial ANOVA'),
+              answer('Multiple Linear Regression'),
+              message = "Here, you have a continuous dependent variable, stress, that you want to compare across three categories of a single independent variable, hospital size. The best option of the given tests would be a One-Way ANOVA. Because you're comparing three separate samples (nurses who work in small hospitals, nurses who work in medium-sized hospitals, and nurses who work in large hospitals), you would use a Between-Subjects ANOVA"),
+     question('You have 2 continuous independent variables, sleep quality and stress level, and you want to test whether they significant predict depression severity (measured on a continuous scale). You also want to know whether the effect of sleep quality on depression severity changes at different levels of stress. Which of the following tests is the most appropriate for testing this?',
+     answer('One-Sample t-test'),
+     answer('independent-samples t-test'),
+     answer('paired-samples t-test'),
+     answer('One-Way Between-Subjects ANOVA'),
+     answer('One-Way Repeated-Measures ANOVA'),
+     answer('Factorial ANOVA'),
+     answer('Simple Linear Regression'),
+     answer('Multiple Linear Regression', correct = T),
+     message = "Here, you want to investigate the relationship between 2 continuous predictors and a continuous outcome. You also want to determine whether there is an interaction between the 2 continuous predictors in their relationship with the outcome. For this type of analysis, you would use a multiple linear regression model with an interaction term."),
+     question("A researcher wants to investigate whether communication style (Levels: Passive; Aggressive; Passive-Agressive; Assertive) and attachment style (Levels: Secure; Anxious; Avoidant; Disorganised) affect relationship satisfaction, measured on a continuous scale. Which of the following statistical tests should he use?",
+              answer('2 One-Sample t-tests'),
+              answer('2 independent-samples t-tests'),
+              answer('2 paired-samples t-tests'),
+              answer('2 One-Way Between-Subjects ANOVAs'),
+              answer('2 One-Way Repeated-Measures ANOVA'),
+              answer('Factorial ANOVA', correct = T),
+              answer('2 Simple Linear Regressions'),
+              message = "There are two categorical independent variables and a single continuous dependent variable. If you were to use two separate analyses, you would (1) increase the chances of making a Type I error and (2) be unable to capture the effect of bullying on emotional regulation while controlling for parental interactions and vice versa. The best option here is a Factorial ANOVA. Specifically, this would be a 4x4 Between-Subjects ANOVA"),
+     question("A researcher investigates whether family history of substance abuse (Yes or No) is related to frequency of use in substance abusers. Which test should they use?",
+              answer('One-Sample t-test'),
+              answer('Independent-samples t-test', correct = T),
+              answer('Paired-samples t-tests'),
+              answer('One-Way Between-Subjects ANOVA'),
+              answer('One-Way Repeated-Measures ANOVA'),
+              answer('Factorial ANOVA'),
+              answer('Simple Linear Regressions'),
+              message = "Here, the researcher will be comparing the frequency of substance use between two independent groups - those who have a family history of substance abuse, and those who do not. This can be checked with an independent-samples t-test."))
 ```
 
 
 ## Checking your Data
 
 ## Checking Assumptions
+
+```{r checkingAssumptions, echo = FALSE}
+quiz(caption = '',
+     question("True or False: We can test for the independence of observation using a qqplot.",
+              answer('True'),
+              answer('False', correct = T),
+              message = "False. A qqplot tests normality. There is no general test for independence, this is a design feature."),
+     question('If residuals show the same amount of variance across the range of measurement, they are referred to as...',
+              answer('Homogeneous/Homoskedastic', correct = T),
+              answer('Multicollinear'),
+              answer('Normally Distributed'),
+              answer('Independent'),
+              message = 'Homogeneity/Homoscedasticity indicates that the residuals have the same amount of variation across the range of measurement.  Heteroscedasticity indicates that the residuals have different amounts of variation across the range of measurement. Normal distribution of residuals refers to the distribution of the raw value of the residuals rather than their variance. Residuals may be normally distributed but heteroscedastic.',
+              random_answer_order = T),
+     question('You have the following model: y = beta0 + beta1x1 + beta2x2 + epsilon. Which of the following would be most appropriate to check whether this model meets the assumption of linearity?',
+              answer('individual scatterplots plotting y against each predictor'),
+              answer('a residuals by predicted values plot', correct = T),
+              answer('You could use either scatterplots or a residuals by predicted values plot'),
+              answer('You should use neither scatterplots nor a residuals by predicted values plot'),
+              message = 'While a scatterplot is useful for checking linearity in a regression model with a single predictor, when we have a model with multiple predictors, we need to know whether the relations are linear between each predictor and outcome, controlling for the other predictors. Individual scatterplots do not account for this, so a residuals by predicted values plot would be the best option for checking linearity in this example.')
+     
+     )
+```
 
 ## Running Statistical Tests
 
@@ -83,9 +166,60 @@ quiz(caption = '',
 
 Monica - lots of questions with images of SPSS output - which of the following interpretations is correct? that sort of thing.
 
-## Power Analysis
+```{r interpretation, echo = FALSE}
+quiz(caption = '',
+     question("Given the following information, which model is most likely to best predict the value of an outcome variable?",
+              answer('A model with high model variance and low residual variance.', correct = T),
+              answer('A model with high model variance and high residual variance.'),
+              answer('A model with low model variance and high residual variance.'),
+              answer('A model with low model variance and low residual variance.'),
+              message = "Model variance refers to the amount of variance in the outcome variable explained by the predictors in the model. Residual variance refers to the amount of variance that is cannot be explained by the predictors included in the model.",
+              random_answer_order = T),
+     question("I check the effect size associated with my t-test and note that Cohen's D is equal to .18. Which of the following best describes the relationship between my variables?",
+              answer('The two variables are not related.'),
+              answer('The two variables are weakly related.', correct = T),
+              answer('The two variables are moderately related.'),
+              answer('The two variables are strongly related.'),
+              message = "Recall the interpretation conventions for Cohen's D. A weak relationship is reflected by values less than or equal to 0.20, moderate relationships are reflected by values between 0.21 and 0.79, and strong relationships are reflected by relationships greater than or equal to 0.80."),
+     question("Which of the following statements is a proper interpretation of what a p-value measures?",
+              answer('The probability that the null hypothesis, H0, is true.'),
+              answer('The probability that the alternative hypothesis, H1, is true.'),
+              answer('The probability of seeing a test statistic as extreme, or more extreme, than the observed one, when H0 is true.', correct = T),
+              answer('The probability of seeing a test statistic equal to or greater than the observed one.'),
+              message = 'The p-value is the probability, computed assuming H0 to be true, of observing a test statistic at least as extreme as the observed one. We always compute "extreme" in the direction specified by the alternative hypothesis H1. If H1 includes the > symbol, the p-value is the probability of test statistics equal to or greater than than the observed one. If H1 includes the < symbol, the p-value is the probability of test statistics equal to or less than the observed one. If H1 includes the notequal symbol, the p-value is the probability in both directions (the probability of values equal to or more extreme than the observed statistic).'),
+     question("I run a hypothesis test. I set an alpha level of 0.01. My calculated test statistic has a associated p-value of 0.03. Which of the following is the correct decision?",
+              answer('Fail to reject the null hypothesis.', correct = T),
+              answer('Reject the null hypothesis'),
+              message = 'If p > alpha we fail to reject the null hypothesis. As 0.03 > 0.01, we do not reject H0.'))
+```
 
-## Interpreting Effect Sizes?
+Imagine that you are investigating the effect of class time (9AM, 10AM, and 1PM) on test scores. You run a One-Way ANOVA and get these results:
+
+```{r, echo=FALSE}
+knitr::include_graphics('~/Desktop/UofE/Teaching/PRM/PRMcontent/Labs/images/week10_classANOVA.png')
+#knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_classANOVA.png')
+```
+
+Use these to answer the following questions. Assume that you have set alpha = .05.:
+
+```{r interp2, echo = FALSE}
+quiz(caption = '',
+     question("There is a significant effect of class time on test score.",
+              answer('True'),
+              answer('False', correct = T),
+              message = "The F-statistic is less than 1 and the p-value is .879, which is greater than our alpha threshold of .05. This means that there is an 88% chance we would see results as extreme as this if the null hypothesis were true. Therefore, there is not enough evidence to claim that there is a significant effect of class time on test score."),
+     question_numeric("What is value of the F-statistic associated with this test? Please round your answer to two decimal places.",
+              answer(0.22, correct = T),
+              message = "The F-statistic associated with this test is 0.22."),
+     question_numeric("You would report this result in the following format: F(___, ___) = 0.22, p = .879. Note the two blank spaces. What number goes in the first blank?",
+              answer(3, correct = T),
+              message = 'The first blank reflects the model degrees of freedom. SPSS calls this the "Between-Groups df". In this example, it is 3.'),
+     question_numeric("You would report this result in the following format: F(___, ___) = 0.22, p = .879. Note the two blank spaces. What number goes in the second blank?",
+              answer(48, correct = T),
+              message = 'The second blank reflects the residual degrees of freedom. SPSS calls this the "Within-Groups df". In this example, it is 48.'))
+```
+
+## Power Analysis
 
 
 ## Reporting?
