--- a/docs/Labs/Week10_formativeAssessment.Rmd
+++ b/docs/Labs/Week10_formativeAssessment.Rmd
@@ -306,3 +306,27 @@ quiz(caption = '',
               message = 'The interpretations for perfectionism and self-esteem are correct, but the interpretation for media exposure is not. Because the association between media exposure and body satisfaction is not significant, we cannot assume there is any relationship between the two variables.',
               random_answer_order = T))
 ```
+
+
+## Power Analysis
+
+Use [Webpower](https://webpower.psychstat.org/wiki/models/index) to answer the following questions. Please note that you may need to use the following formulas to convert between $\eta^2$ / $R^2$ and $f$:
+
+$$\eta^2/R^2 = \frac{f^2}{1+f^2}$$
+
+
+$$f^2 = \frac{R^2}{1-R^2}$$
+
+```{r power, echo = FALSE}
+quiz(caption = '',
+     question_numeric("What TOTAL sample size do you need to have 80% power to detect an effect of d = .3 at alpha = .05 for a two-tailed independent samples t-test with equal group sizes? Please round your answer to a whole number.",
+              answer(352, correct = T),
+              message = "You need 176 participants in each group to detect this effect."),
+     question_numeric('You are running a 2x4 between-subjects ANOVA. You are primarily interested in the interaction effect. What effect size (in eta-squared) do you have 80% power to detect with alpha = .05 and a sample size of 210? Please round your answer to two decimal places.',
+              answer(.05, correct = T),
+              message = 'The total number of groups is equal to 2x4 = 8. The numerator degrees of freedom for the interaction is (j-1)x(k-1), where j is the number of levels in variable 1 and k is the number of levels in variable 2. Here, the numerator degrees of freedom are (2-1)x(4-1) = 3. The value of f is equal to .23. This can be converted to eta-squared: .23^2/(1+.23^2) = .05.'),
+     question_numeric('What is the total sample size necessary to detect an R2 of .15 with 80% power and alpha = .05 using a linear regression model with 5 predictors?',
+              answer(79, correct = T),
+              answer(77, correct = T),
+              message = "Webpower's linear regression calculator converts R2 into f2 for you. Otherwise, you can find f2 using the following equation: .15/(1-.15) = .18. Depending on how you round this value, you will need between 77-79 participants to detect the desired effect."))
+```
