--- a/docs/Labs/Week09_regressionII_Lab.Rmd
+++ b/docs/Labs/Week09_regressionII_Lab.Rmd
@@ -359,15 +359,15 @@ knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week9_P
 
 To address your hypothesis, you'll specifically want to check the row labeled `Int_1`, which reflects the interaction between `PhysAct` and `Sleep`. The $p$-values in the 'Sig.' column indicate that there is a significant interaction. The $p$-value of .040 is lower than the $\alpha$ threshold of .05. As in last week's model, the $p$-values associated with `Sleep` and `SocSupp` are also below the $\alpha$ threshold, indicating they are significant predictors of `Wellbeing`. The $p$-value associated with `PhysAct` is greater than .05, so it is not significant. As before, you can use the $\beta$ estimates to give you a better sense of the interaction between `PhysAct` and `Sleep` on `Wellbeing`. 
 
-The  $\beta$ coefficient associated with `Int_1` is 0.03. The $\beta$ coefficient tells us how much more the relationship between `PhysAct` and `Wellbeing` changes for every additional hour of sleep. So, in this case, for every additional hour of sleep, the relationship between `PhysAct` and `Wellbeing` increases by .03 points on the Wellbeing assessment. The Johnson-Neyman analysis will help break this interaction down further so that it is easier to interpret.
+The  $\beta$ coefficient associated with `Int_1` is 0.03. The $\beta$ coefficient tells us how much more the relationship between `PhysAct` and `Wellbeing` changes for every additional hour of sleep. So, in this case, for every additional hour of sleep, the relationship between `PhysAct` and `Wellbeing` increases by .03 points on the Wellbeing assessment. The Simple Slopes and Johnson-Neyman analysis will help break this interaction down further so that it is easier to interpret.
  
 ```{r, echo = F, fig.align= 'center', out.width = '75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week9_PROCESSjn.png')
 ```
 
-The first part, 'conditional effects of focal predictor at values of the moderator:' tells you the effect of Physical Activity on Wellbeing in those who sleep less than average (-1 SD), those who get about average amounts of sleep, and those who sleep more than average (+1 SD). $p$ is less than .05 in those who sleep more than average, but not significant in those who get average amounts of sleep or less. The $\beta$ coefficient associated with the high sleep group is .36, which suggests that in this group, for every additional hour of physical activity per week, well-being scores increase by .36. 
+The first part, 'conditional effects of focal predictor at values of the moderator:' reflects the Simple Slopes Analysis. It tells you the effect of Physical Activity on Wellbeing in those who sleep less than average (-1 SD), those who get about average amounts of sleep, and those who sleep more than average (+1 SD). $p$ is less than .05 in those who sleep more than average, but not significant in those who get average amounts of sleep or less. The $\beta$ coefficient associated with the high sleep group is .36, which suggests that in this group, for every additional hour of physical activity per week, well-being scores increase by .36. 
 
-The second part gives an even more detailed look at which values of sleep are associated with a significant association between physical activity and well-being. Specifically, those who get about 3.5 hours of sleep or more than average per week have a significant, positive association between physical activity and well-being. For everyone else, there is no significant association between sleep and well-being.
+The second part (the Johnson-Neyman analysis) gives an even more detailed look at which values of sleep are associated with a significant association between physical activity and well-being. Specifically, those who get about 3.5 hours of sleep or more than average per week have a significant, positive association between physical activity and well-being. For everyone else, there is no significant association between sleep and well-being.
 
 
 </details>
